@@ -214,6 +214,7 @@ Christian Grothoff
 Vladislav Guberinić
 Gideon N. Guillen
 Aman Gupta
+Ashish Gupta
 Christian Hammond
 Erick Hamness
 Fred Hampton
